--- a/Matching-Images-Game/MainWindow.xaml
+++ b/Matching-Images-Game/MainWindow.xaml
@@ -5,8 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Matching_Images_Game"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Парні картинки" Height="350" Width="461.842">
     <Grid>
-        
+        <GroupBox x:Name="groupBox" Header="Меню" HorizontalAlignment="Left" VerticalAlignment="Top" Height="71.644" Width="444.368" Margin="9.474,0,0,0">
+            <Grid Margin="0,0,-2,-12.96">
+                <Label x:Name="label" Content="Розмірність ігрового поля:" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <Label x:Name="label1" Content="Затримка картинок при запуску:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,23.25,0,0"/>
+                <Button x:Name="button" Content="Запустити" HorizontalAlignment="Left" Margin="335.263,6,0,0" VerticalAlignment="Top" Width="75"/>
+                <TextBox x:Name="textBox" HorizontalAlignment="Left" Margin="187.89,28.25,0,16.184" TextWrapping="Wrap" Text="" Width="73.983"/>
+                <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="187.89,6.04,0,0" VerticalAlignment="Top" Width="73.983" Height="17.21"/>
+            </Grid>
+        </GroupBox>
+        <GroupBox x:Name="groupBox1" Header="10 найкращих результатів" HorizontalAlignment="Left" Margin="0,76.644,0,0" VerticalAlignment="Top" Height="232.356" Width="443.842"/>
+
     </Grid>
 </Window>
